Added new endpoint /save and enhanced endpoint /search