@@ -2,23 +2,16 @@ package io.deeti.elasticsearch.es.service;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.deeti.elasticsearch.dto.LaptopDto;
 import io.deeti.elasticsearch.es.model.Laptop;
-import io.deeti.elasticsearch.es.repository.LaptopEsRepository;
-import org.elasticsearch.index.query.MultiMatchQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
-import org.springframework.data.elasticsearch.core.query.IndexQueryBuilder;
 import org.springframework.data.elasticsearch.core.query.NativeSearchQueryBuilder;
 import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.stereotype.Component;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 
 /**
@@ -28,38 +21,34 @@ import java.util.stream.Stream;
 public class Searcher {
 
     private final ElasticsearchOperations client;
-    private final LaptopEsRepository laptopEsRepository;
 
-    public Searcher(ElasticsearchOperations client,
-                    LaptopEsRepository laptopEsRepository) {
+    public Searcher(ElasticsearchOperations client) {
         this.client = client;
-        this.laptopEsRepository = laptopEsRepository;
     }
 
     /**
-     * @param text
+     * @param text given text
      * @return returns search results
-     * @throws IOException
      */
-    public List<LaptopDto> elasticSearch(String text) throws IOException {
+    public List<Laptop> elasticSearch(String text) {
 
         ObjectMapper mapper = new ObjectMapper();
         mapper.findAndRegisterModules();
         mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
         Query query = new NativeSearchQueryBuilder()
-                .withQuery(QueryBuilders.matchQuery("laptopModel", text))
-                .withQuery(QueryBuilders.matchQuery("brand", text))
+                .withQuery(QueryBuilders.multiMatchQuery(text, "laptopModel", "brand"))
                 .build();
 
         SearchHits<Laptop> searchHits = client.search(query, Laptop.class);
-        return Stream.of(searchHits)
-                .map(hit -> mapper.convertValue(hit, LaptopDto.class))
-                .collect(Collectors.toList());
+        return searchHits
+                .stream()
+                .map(SearchHit::getContent)
+                .toList();
     }
 
-    public Laptop getByLaptopId(String id) {
-        return laptopEsRepository.findByLaptopId(id);
+    public void saveLaptop(Laptop laptop) {
+        client.save(laptop);
     }
 
 }
